--- a/nr.ipynb
+++ b/nr.ipynb
@@ -587,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['b'], 2, 3, 4, 5]\n"
+      "['b', 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -603,6 +603,86 @@
     "o=[1,2,3,4,5]\n",
     "o[0]='b'\n",
     "print(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', {'b': 15}, 10, '5+j']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to modify the new value to the ending of the gien list\n",
+    "p=['a',{'b':15},10,5]\n",
+    "p[-1]='5+j'\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2.5, (5+2j), {10: 30}, 'abc', 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to modify the middle value to the starting of the gien list\n",
+    "q=[1,2.5,5+2j,True,'abc',100]\n",
+    "q[len(q)//2]={10:30}\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 10.14, 100, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to modify the first 4 position values to the starting of the gien list\n",
+    "r=[1,2,3,4,5,5]\n",
+    "r[0:5]=['a',10.14,100]\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'a', 'd', 'r', 'e', 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#was to modify the sequence of values  in the gien list\n",
+    "s=[1,2,3,4,5,6,7,8]\n",
+    "s[2:5]=['a','d','r','e']\n",
+    "print(s)"
    ]
   }
  ],
